--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
-            SITE_NAME: "FODI",
+            SCF_GATEWAY: "https://onedrivezk.zykk.workers.dev/",
+            SITE_NAME: "OneDrive-ZK",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
